--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="css/style.min.css">
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <!-- <noscript>You need to enable JavaScript to run this app.</noscript> -->
     <div id="root"></div>
   </body>
 </html>
